Fix white space around toolbox line breaks causing odd right margins

--- a/app/styles/toolbars.css
+++ b/app/styles/toolbars.css
@@ -94,7 +94,6 @@
 	display: inline-block;
 	vertical-align: top;
 	margin: 0px;
-	margin-right: -4px;
 }
 	.toolbox input[type="radio"] {
 		display: none;
